# heygen_content

./: .env.example  README.md  __init__.py  client.py  config.py  pyproject.toml  pytest.ini  rest_client.py  setup.py
_docs/: alpha_interactive_avatar_realtime.md  streaming_live_kit.md
_docs/streaming/: streaming.md
_tests/: README.md  __init__.py  conftest.py  pytest.ini  test_client.py  test_sessions.py  test_v1_v2_endpoints.py
_tests/utils/: test_assets.py  test_avatars.py  test_brand.py  test_folders.py  test_photo_avatars.py  test_templates.py  test_translation.py  test_user.py  test_video_generation.py  test_video_management.py  test_voices.py  test_webhooks.py
api/: __init__.py  _http.py
api/streaming/: _enums.py  _exceptions.py  _requests.py  _responses.py
api/v1/: __init__.py  brand_voice_list.py  brand_voice_update.py  folders_create.py  folders_list.py  folders_restore.py  folders_trash.py  folders_update.py  schemas.py  user_me.py  video_delete.py  video_list.py  video_share.py  video_status_get.py  video_webm.py  webhook_endpoint_add.py  webhook_endpoint_delete.py  webhook_endpoint_list.py  webhook_endpoint_update.py  webhook_events_list.py
api/v2/: __init__.py  generate_photo_avatar_photos.py  (+10 more)
schemas/: assets.py  avatars.py  brand.py  folders.py  photo_avatars.py  templates.py  translation.py  user.py  video_generation.py  video_management.py  voices.py  webhooks.py
utils/: assets.py  avatars.py  brand.py  folders.py  photo_avatars.py  templates.py  translation.py  user.py  video_generation.py  video_management.py  voices.py  webhooks.py
(+8 files in other folders)
